TERF-78: add s3_policies to non-local groups
