# codegen_tools/configs/resources.go
@@ -57,6 +57,25 @@ var ResourcesTemplates = []ResourceTemplateV2{
 		},
 	},
 	ResourceTemplateV2{
+		ResourceName:             "NonLocalGroup",
+		Path:                     ToStringPointer("groups/query"),
+		Model:                    api_latest.NonLocalGroup{},
+		DestFile:                 ToStringPointer("nonlocalgroup.go"),
+		IgnoreFields:             NewStringSet(),
+		RequiredIdentifierFields: NewStringSet("gid"),
+		ComputedFields:           NewStringSet("id"),
+		OptionalIdentifierFields: NewStringSet(),
+		ListsNamesMap:            map[string][]string{},
+		Generate:                 true,
+		CreateFunc:               utils.NonLocalGroupCreateFunc,
+		GetFunc:                  utils.NonLocalGroupGetFunc,
+		UpdateFunc:               utils.NonLocalGroupUpdateFunc,
+		DeleteFunc:               utils.NonLocalGroupDeleteFunc,
+		ResponseGetByURL:         false,
+		DisableImport:            true,
+		DataSourceName:           "vastdata_non_local_group",
+	},
+	ResourceTemplateV2{
 		ResourceName:             "Group",
 		Path:                     ToStringPointer("groups"),
 		Model:                    api_latest.Group{},
